# AI_Legal_Assistant

./: README.md  cases.json  docker-compose.yml  main.py  pyproject.toml  run.py  test_embeddings.py
agents/: intent_classifier.py  legal_agent.py  tool_selector.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py
backend/app/core/: config.py
core/: llm.py
data_pipeline/: auto_ingest.py  metadata.py  section_parser.py
db/: index.faiss  index.pkl
frontend/: package-lock.json
rag/: hibrid_retriever.py  ingest.py  retriever.py
services/: legal_service.py
tools/: action_tool.py  complaint_tool.py  fir_tool.py
ui/: app.py
utils/: case_memory.py  memory.py  prompt.py
